<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.drewhoo.hw3.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:layout_marginTop="3pt"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/appetizer"
            android:textSize="8pt"
            android:onClick="onClick"
            android:id="@+id/btnApp">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="3pt"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/pasta"
            android:textSize="8pt"
            android:onClick="onClick"
            android:id="@+id/btnPasta">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_marginTop="3pt"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/meatfish"
            android:textSize="8pt"
            android:onClick="onClick"
            android:id="@+id/btnMeatfish">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4"
        android:layout_marginTop="3pt"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/dessert"
            android:textSize="8pt"
            android:onClick="onClick"
            android:id="@+id/btnDessert">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:id="@+id/linearLayout5"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:orientation="vertical"
        android:layout_marginTop="10pt">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="4pt"
            android:layout_marginRight="4pt"
            android:textSize="8pt"
            android:text="@string/appetizer_text"
            android:layout_marginTop="1pt"
            android:id="@+id/appetizer_text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="4pt"
            android:layout_marginRight="4pt"
            android:textSize="8pt"
            android:text="@string/pasta_text"
            android:layout_marginTop="1pt"
            android:id="@+id/pasta_text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="4pt"
            android:layout_marginRight="4pt"
            android:textSize="8pt"
            android:text="@string/meatfish_text"
            android:layout_marginTop="1pt"
            android:id="@+id/meatfish_text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="4pt"
            android:layout_marginRight="4pt"
            android:textSize="8pt"
            android:text="@string/dessert_text"
            android:layout_marginTop="1pt"
            android:id="@+id/dessert_text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout6"
        android:layout_marginTop="3pt"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/restart"
            android:textSize="8pt"
            android:onClick="onClick"
            android:id="@+id/restart">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout7"
        android:layout_marginTop="3pt"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textSize="8pt"
            android:onClick="onClick"
            android:id="@+id/confirm">
        </Button>
    </LinearLayout>

</LinearLayout>
